<resources>
    <string name="app_name">Memeticame</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello world</string>
    <string name="create_group_chat">Create group</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="chat_name">Chat name</string>
    <string name="send">Send</string>
    <string name="sender_label">sender</string>
    <string name="timestamp_label">timestamp label</string>
    <string name="message_label">message label</string>
    <string name="me">Me</string>
    <string name="at">at</string>
    <string name="chats_shared_with_user">Existing chats with this user:</string>
    <string name="logout">Logout</string>
    <string name="add_contact">Add contact</string>
    <string name="create_chat">Create chat</string>
    <string name="cancel">cancel</string>
    <string name="attachment_name">attachment name</string>
    <string name="create_group">Create group</string>
    <string name="group_name">Group Name</string>
    <string name="participants">Participants</string>
    <string name="add_participants">Add participants</string>
    <string name="step_1_choose_an_image">Step 1: Choose an Image</string>
    <string name="step_2_record_your_audio">Step 2: Record Your Audio</string>
    <string name="invitation_to">Invitation to...</string>
    <string name="admin">Admin</string>
    <string name="created_at">Created At</string>
    <string name="unread_count">Unread Count</string>
    <string name="message_size">message size</string>
    <string name="attachment_size">attachment size</string>
    <string name="mime_type">mime type</string>
    <string name="see_downloads_gallery">See downloads gallery</string>
    <string name="click_to_download">(click to download)</string>
    <string name="open">open</string>
    <string name="last_message">last message</string>
    <string name="select_contacts_to_add">Select contacts to add</string>
    <string name="see_plain_meme_gallery">See plain meme gallery</string>
    <string name="send_memeaudio">Send memeaudio</string>
    <string name="send_meme">Send meme</string>
    <string name="create_memetext">Create meme</string>
    <string name="from_device">From device</string>
    <string name="from_camera">From camera</string>
    <string name="from_gallery">From gallery</string>
    <string name="create_meme">Create meme</string>
    <string name="percentage">percentage</string>
    <string name="meme_name">Meme name</string>
    <string name="select_image">Select image</string>
    <string name="camera">Camera</string>
    <string name="meme_dialog_font_size_title">Font size</string>
    <string name="meme_dialog_font_family_title">Font family</string>
    <string name="meme_dialog_text_placeholder">Enter a text</string>
    <string name="ok">OK</string>
    <string name="color">Color</string>
    <string name="see_memes_gallery">See memes gallery</string>
</resources>
