<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_create_group_chat"
        android:orderInCategory="100"
        android:title="@string/create_group_chat" />

    <item
        android:id="@+id/action_add_contact"
        android:orderInCategory="100"
        android:title="@string/add_contact" />

    <item
        android:id="@+id/action_see_downloads_gallery"
        android:orderInCategory="100"
        android:title="@string/see_downloads_gallery" />

    <item
        android:id="@+id/action_see_memes_gallery"
        android:orderInCategory="100"
        android:title="@string/see_memes_gallery" />

    <item
        android:id="@+id/action_create_meme"
        android:orderInCategory="100"
        android:title="@string/create_meme" />

    <item
        android:id="@+id/action_see_channels"
        android:orderInCategory="100"
        android:title="@string/channels"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_emojime"
        android:orderInCategory="100"
        android:title="@string/emojime" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout" />
</menu>