<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp">

    <EditText
        android:id="@+id/input_meme_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meme_dialog_text_placeholder">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/font_size_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meme_dialog_font_size_title"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/font_size_bar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="172"
        android:progress="24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/font_family_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/meme_dialog_font_family_title"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/font_family_spinner"
            android:layout_width="212dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_color_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="7dp"
            android:text="@string/color"
            android:textSize="16sp" />

        <com.rtugeek.android.colorseekbar.ColorSeekBar
            android:id="@+id/color_slider"
            android:layout_width="249dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>