<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/group_message_from"
    android:layout_width="wrap_content"
    android:layout_height="24dp">

    <ImageView
        android:id="@+id/label_attachment_type"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_textsms_black_24dp" />

    <TextView
        android:id="@+id/label_sender"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/sender_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/at"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/label_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/timestamp_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorBlack" />
</LinearLayout>