<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/message_padding">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/message_padding"
        android:paddingTop="@dimen/message_padding">

        <TextView
            android:id="@+id/label_sender"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center"
            android:text="@string/sender_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/inMessageColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/at"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/inMessageColor" />

        <TextView
            android:id="@+id/label_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center"
            android:text="@string/timestamp_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/inMessageColor" />

        <ImageView
            android:id="@+id/label_attachment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_textsms_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_attachment_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="@string/attachment_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/outMessageColor"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:maxHeight="128dp"
                android:maxWidth="128dp"
                android:src="@drawable/ic_access_time_black_24dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/message_size"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/inMessageColor" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/message_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inMessageColor" />
    </LinearLayout>
</LinearLayout>