<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/message_padding">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal"
        android:paddingTop="@dimen/message_padding"
        android:paddingBottom="@dimen/message_padding">

        <ImageView
            android:id="@+id/label_attachment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_textsms_black_24dp" />

        <TextView
            android:id="@+id/label_sender"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center"
            android:text="@string/sender_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/outMessageColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/at"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/outMessageColor" />

        <TextView
            android:id="@+id/label_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center"
            android:text="@string/timestamp_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/outMessageColor" />

        <ImageView
            android:id="@+id/message_status_check"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_check_black_24dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/message_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/outMessageColor" />
</LinearLayout>