<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="64dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/chat_icon"
        android:layout_width="64dp"
        android:layout_height="match_parent"
        android:background="@color/iconBackground"
        android:src="@drawable/ic_people_black_24dp" />

    <TextView
        android:id="@+id/label_created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/created_at"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/label_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/label_created_at"
        android:text="@string/admin"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/chat_icon"
        android:layout_toRightOf="@+id/chat_icon"
        android:layout_centerVertical="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimaryDark" />
</RelativeLayout>